# plug-and-play

./: CMakeLists.txt  README.md
example/helloworld/: CMakeLists.txt
example/helloworld/app/: main.cpp
example/helloworld/common/: app.cpp  app.h  i_app.h  i_plugin.h
example/helloworld/plugin/: plugin.cpp  plugin.h
include/: pap.h  pap_declare.h  pap_plugin_loader.h
test/: happy_test.cpp
